--- a/ui/index.html
+++ b/ui/index.html
@@ -3,9 +3,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="scripts/bootstrap-material-design.js"></script>
+    <script src="scripts/ripples.js"></script>
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="style/bootstrap-material-design.css" />
+    <link rel="stylesheet" href="style/ripples.css" />
     <link rel="stylesheet" href="style/style.css" />
 
 </head>
